changed cmakelists to detect files in source directory automatically

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,12 @@ endif()
 
 project(ELCT350)
 
-add_executable(Lab4 src/main.cpp src/Sinusoidal.cpp)
-target_include_directories(Lab4 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-add_custom_command(TARGET Lab4 POST_BUILD
+set(SIMULATOR_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+file(GLOB_RECURSE SIMULATOR_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+file(GLOB_RECURSE SIMULATOR_HEADERS ${SIMULATOR_INCLUDE}/*.h)
+
+add_executable(Simulator ${SIMULATOR_SOURCE} ${SIMULATOR_HEADERS})
+target_include_directories(Simulator PRIVATE ${SIMULATOR_INCLUDE})
+add_custom_command(TARGET Simulator POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
-                   "${CMAKE_CURRENT_SOURCE_DIR}/config" "$<TARGET_FILE_DIR:Lab4>/config")
+                   "${CMAKE_CURRENT_SOURCE_DIR}/config" "$<TARGET_FILE_DIR:Simulator>/config")
