--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,12 @@ if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
       CACHE STRING "")
 endif()
 
+project(ELCT350)
+
+set(SIMULATOR_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+file(GLOB_RECURSE SIMULATOR_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+file(GLOB_RECURSE SIMULATOR_HEADERS ${SIMULATOR_INCLUDE}/*.h)
+
+add_executable(Simulator ${SIMULATOR_SOURCE} ${SIMULATOR_HEADERS})
+target_include_directories(Simulator PRIVATE ${SIMULATOR_INCLUDE})
+
